--- a/home.css
+++ b/home.css
@@ -40,6 +40,7 @@
     
 }
 
+
 .navbar_items:hover{
     font-size: 22px;
 }
@@ -149,8 +150,30 @@
 }
 .second_content{
     width: 100%;
-    height: 500px;
+    height: 600px;
     background-color: orange;
     background: linear-gradient(to bottom, azure, bisque);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     
+}
+
+.sec_text{
+    color: gray;
+    font-family: courier;
+    font-size: 35px;
+    font-weight: bolder;
+    padding: 10%;
+    margin: 5%;
+    
+}
+
+.foot{
+    color: gray;
+    font-size: larger;
+    background-color: bisque;
+    display: flex;
+    justify-content: center;
 }
